# parquet2arrow

./: Cargo.toml  README.md  read.py
src/: main.rs
