[package]
name = "parquet2arrow"
version = "0.1.0"
edition = "2021"

authors = ["Alex <contributions@alexkreidler.com>"]
description = "A command-line (CLI) tool to convert a Parquet file to an Apache Arrow file"
readme = "README.md"
repository = "https://github.com/alexkreidler/parquet2arrow"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "9.1.0"
parquet = "9.1.0"
clap = { version = "3.1.5", features = ["derive"] }
anyhow = "1.0.55"
